--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">lesson1</string>
+    <string name="name">Olya</string>
+    <string name="surname">Telezhnaya</string>
+    <string name="mail">olyatelezhnaya@gmail.com</string>
 </resources>
